feat: add multi-MAC host merge support (#375)
